<resources>
    <string name="app_name">Zuula App</string>
    <string name="hello_world">Hello world</string>
    <string name="item_title">Item Title</string>
    <string name="item_title_">Item Title</string>
    <string name="item_description">Item Description</string>
    <string name="enter_item_title">Enter item title</string>
    <string name="enter_item_description">Enter item description</string>
    <string name="select_image">Select Image</string>
    <string name="upload_item">Upload Item</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="my_uploads">My Uploads</string>
    <string name="upload_item_">Upload Item</string>
    <string name="default_web_client_id">122903763660-mecsi40nt4ojf6lt75jlodhdq9ja0r7o.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">No Items Available</string>
    <string name="remove_item">Remove Item</string>
    <string name="item_id">Item ID:</string>
</resources>