<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <!-- Label above the EditText -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Item Title"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="#45011A"
                android:layout_marginBottom="4dp" />


            <!-- EditText with rounded background -->
            <EditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:hint="@string/enter_item_title"
                android:textColor="#000000"
                android:textColorHint="#888888"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <!-- Label above the EditText -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_item_description"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="#45011A"
                android:layout_marginBottom="4dp" />


            <!-- EditText with rounded background -->
            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:hint="@string/enter_item_title"
                android:textColor="#000000"
                android:textColorHint="#888888"
                android:textSize="16sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <!-- Label above the EditText -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter contact information"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="#45011A"
                android:layout_marginBottom="4dp" />


            <!-- EditText with rounded background -->
            <EditText
                android:id="@+id/contactInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:inputType="phone"
                android:hint="@string/enter_item_title"
                android:textColor="#000000"
                android:textColorHint="#888888"
                android:textSize="16sp"/>
        </LinearLayout>




    <!-- New CheckBox for isLost -->
    <CheckBox
        android:id="@+id/isLostCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Is Lost?"
        android:textSize="21sp"
        android:textColor="#45011A"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#4C1090"
        android:background="#AA918D"
        android:textStyle="bold"

        android:textSize="21sp"
        android:text="@string/select_image"
        android:layout_marginTop="8dp"/>




    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:textSize="21sp"
        android:background="#AA918D"
        android:textColor="#4C1090"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/upload_item"
        android:layout_marginTop="8dp"/>

</LinearLayout>
    </ScrollView>

</LinearLayout>