<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:paddingHorizontal="2dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#923E5D"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">



              <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="26sp"
                android:text="Zuula App"
                android:textColor="@color/white"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/hi2"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"


                android:layout_marginRight="7dp"
                android:layout_centerVertical="true"


                android:layout_toLeftOf="@id/profileImage2"
                android:textSize="15sp"
                android:text="Hi,User!"
                android:textColor="@color/white"
                android:textStyle="normal"/>


            <!-- Profile Picture (rounded) -->
            <ImageView
                android:id="@+id/profileImage2"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_weight="1"
                android:layout_centerVertical="true"

                android:layout_marginRight="3px"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_launcher_foreground"
                android:scaleType="fitCenter"
                android:layout_marginEnd="2dp"
                android:background="@drawable/rounded_image_border"/>


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>
<ScrollView
android:layout_width="match_parent"
    android:id="@+id/ss1"
    android:layout_below="@id/toolbar"

    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
       android:id="@+id/l1"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/titleText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_title_"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/descriptionText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description"
        android:textSize="16sp"
        android:paddingTop="8dp"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_id"
            android:textSize="14sp"
            android:paddingTop="8dp"/>

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_id"
            android:textSize="14sp"
            android:paddingTop="8dp"/>


        <TextView
        android:id="@+id/userIdText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User: "
        android:textSize="14sp"
        android:paddingTop="8dp"/>


        <TextView
        android:id="@+id/itemIdText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_id"
        android:textSize="14sp"
        android:paddingTop="8dp"/>

    <ImageView
        android:id="@+id/itemImage1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        android:paddingTop="8dp"/>

    </LinearLayout>

</ScrollView>
    <RelativeLayout
        android:layout_below="@id/ss1"

        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content">

    </RelativeLayout>



</RelativeLayout>
